--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,7 +8,8 @@ tasks:
       go install honnef.co/go/tools/cmd/staticcheck@latest &&
       go install golang.org/x/tools/cmd/goimports@latest &&
       go install github.com/go-delve/delve/cmd/dlv@latest &&
-      go install golang.org/x/perf/cmd/benchstat@latest
+      go install golang.org/x/perf/cmd/benchstat@latest &&
+      curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sudo sh -s -- -y --default-toolchain stable
     command:
       go version
 
